fix: header shadow was not visible

--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -10,6 +10,8 @@
     justify-content: space-between;
     height: 72px;
     border-bottom: var(--outline);
+    z-index: 999;
+    position: relative;
 }
 
 .left {
